GP-Copilot/policies/gatekeeper/templates/k8s-least-privilege.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sleastprivilege
  annotations:
    description: >-
      Enforces least privilege: runAsNonRoot, drop ALL caps, no privileged,
      no host namespaces. Maps to NIST AC-6.
    novasec.cloud/control: AC-6
spec:
  crd:
    spec:
      names:
        kind: K8sLeastPrivilege
      validation:
        openAPIV3Schema:
          type: object
          properties:
            allowedCapabilities:
              type: array
              items:
                type: string
              description: Capabilities allowed to be added (beyond drop ALL)
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sleastprivilege

        import future.keywords.in

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          container.securityContext.privileged == true
          msg := sprintf("AC-6: Container '%s' must not run as privileged", [container.name])
        }

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          not runs_as_nonroot(container)
          msg := sprintf("AC-6: Container '%s' must set runAsNonRoot: true", [container.name])
        }

        runs_as_nonroot(container) {
          container.securityContext.runAsNonRoot == true
        }

        runs_as_nonroot(container) {
          input.review.object.spec.securityContext.runAsNonRoot == true
        }

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          not drops_all(container)
          msg := sprintf("AC-6: Container '%s' must drop ALL capabilities", [container.name])
        }

        drops_all(container) {
          "ALL" in container.securityContext.capabilities.drop
        }

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          cap := container.securityContext.capabilities.add[_]
          allowed := {c | c := input.parameters.allowedCapabilities[_]}
          not cap in allowed
          msg := sprintf("AC-6: Container '%s' adds disallowed capability '%s'", [container.name, cap])
        }

        violation[{"msg": msg}] {
          input.review.object.spec.hostPID == true
          msg := "AC-6: hostPID is not allowed"
        }

        violation[{"msg": msg}] {
          input.review.object.spec.hostNetwork == true
          msg := "AC-6: hostNetwork is not allowed"
        }

        violation[{"msg": msg}] {
          input.review.object.spec.hostIPC == true
          msg := "AC-6: hostIPC is not allowed"
        }
